security-groups.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Security groups stack
Parameters:
  AppName:
    Description: Name of application
    Type: String

  Environment:
    Description: Environment
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - test
      - stage
      - prod
  
Resources:
  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to lb config
      GroupName: !Sub "${Environment}-${AppName}-lb-sg"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      VpcId: 
        Fn::ImportValue:
          !Sub "${Environment}-${AppName}-VPCID"
      Tags: 
        - Key: app
          Value: !Ref AppName
        - Key: env
          Value: !Ref Environment

  TraefikSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to traefik config
      GroupName: !Sub "${Environment}-${AppName}-traefik-sg"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      VpcId: 
        Fn::ImportValue:
          !Sub "${Environment}-${AppName}-VPCID"
      Tags: 
        - Key: app
          Value: !Ref AppName
        - Key: env
          Value: !Ref Environment
  
Outputs:
  StackLBSecurityGroup:
    Description: The id of the security group
    Value: !Ref LBSecurityGroup
    Export: 
      Name: !Sub "${Environment}-${AppName}-lb-sg"

  StackTraefikSecurityGroup:
    Description: The id of the security group
    Value: !Ref TraefikSecurityGroup
    Export: 
      Name: !Sub "${Environment}-${AppName}-traefik-sg"
